# advertizer_ai

./: readme.md
sender-service/: .gitignore  Dockerfile  README.md  alembic.ini  create_tables.py  main.py  pyproject.toml  start_dev.sh  test_service.py
sender-service/alembic/: env.py
sender-service/alembic/versions/: 0381a8eafcee_add_content_generation_tables.py
sender-service/controller/: __init__.py  controller.py
sender-service/models/: __init__.py  content_models.py
sender-service/repository/: __init__.py  database.py
sender-service/schemas/: __init__.py
sender-service/schemas/request/: __init__.py  request_schemas.py
sender-service/service/: __init__.py  deepseek_repository.py  deepseek_service.py
sender-service/settings/: config.py
