[project]
name = "sender-service"
version = "0.1.0"
description = "Sender service for CourseCopilot with FastAPI and PostgreSQL"
authors = [
    {name = "CourseCopilot Team"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "uvicorn (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg (>=3.2.7,<4.0.0)",
    "psycopg-binary (>=3.2.7,<4.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "requests (>=2.31.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api" 